--- a/rapport2.tex
+++ b/rapport2.tex
@@ -41,11 +41,7 @@
   \cleardoublepage
   \include{contexte}
   \cleardoublepage
-  \include{approche}
-  \cleardoublepage
-  \include{methode}
-  \cleardoublepage
-  \include{resultats}
+  \include{stage}
   \cleardoublepage
   \include{concl}
   \cleardoublepage
