--- a/intro.tex
+++ b/intro.tex
@@ -1,11 +1,23 @@
 \section*{Introduction} % Pas de numérotation
 \addcontentsline{toc}{section}{Introduction} % Ajout dans la table des matières
 
-Dans le cadre de ma troisième année de licence informatique, j'ai effectué un stage de recherche à l'Inria. Du 30 mars au 30 juin, dans l'équipe Bonsai, j'ai travaillé sur l'algorithmique du texte appliquée à la bio-informatique.
+Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-informatique, avec de applications aussi bien en biologie fondamentale qu'en médecine. Qu'il serve à étudier l'évolution ou des maladies, la demande est de lus en plus importante.
 
-Ce stage a été pour moi l'opportunité d'approfondir mes connaissances sur la bio-informatique, ainsi que sur diverses structures de données telles que les arbres ou les tableaux de suffixes. Il m'a également permis de découvrir le monde de la recherche et de participer à des conférences.
+De plus, depuis l'émergence des techniques de séquençage haut débit, la masse de données biologiques a augmenté plus vite que les algorithmes existants ne sont capables de les traiter. Le besoin d'améliorer ces algorithmes est donc de plus en plus pressant, à chaque étape du traitement et de l'analyse de ces données.
 
-Mon travail a consisté essentiellement en l'étude, l'amélioration et l'implémentation d'un algorithme de compression et d'indexation de texte.
+La compression et l'indexation des reads, fragments d'ADN retournés par les séquenceurs, est notamment un sujet sur lequel peu de recherches ont été menées, malgré la taille grandissante de ces données.
+
+Néanmoins, beaucoup d'algorithme sur la compression de données existent déjà, et sont utilisés pour stocker l'ADN.
+
+Le travail présenté ici porte donc sur l'étude de l'un de ces algorithmes, \textit{la transformée de Burrows-Wheeler à contexte borné}, et son amélioration pour ce type de données particuliers que sont les reads.
+
+Ce travail a été réalisé au cours du stage de fin de licence informatique à Lille 1, dans l'équipe de bio-informatique Bonsai.
+
+%Dans le cadre de ma troisième année de licence informatique, j'ai effectué un stage de recherche à l'Inria. Du 30 mars au 30 juin, dans l'équipe Bonsai, j'ai travaillé sur l'algorithmique du texte appliquée à la bio-informatique.
+
+%Ce stage a été pour moi l'opportunité d'approfondir mes connaissances sur la bio-informatique, ainsi que sur diverses structures de données telles que les arbres ou les tableaux de suffixes. Il m'a également permis de découvrir le monde de la recherche et de participer à des conférences.
+
+%Mon travail a consisté essentiellement en l'étude, l'amélioration et l'implémentation d'un algorithme de compression et d'indexation de texte.
 
 
-Afin de rendre de compte de ce stage, il parait important de présenter l'équipe dans lequel il s'est déroulé, ainsi que le champ de recherche sur lequel il portait. Il apparaît ensuite nécessaire d'expliquer l'état de l'art concernant le problème posé par le sujet de stage. On pourra alors exposer le travail réaliser pendant ce stage, en revenant d'abord sur le sujet, puis en expliquant les pistes suivies, pour enfin s'intéresser aux résultats.
+%Afin de rendre de compte de ce stage, il parait important de présenter l'équipe dans lequel il s'est déroulé, ainsi que le champ de recherche sur lequel il portait. Il apparaît ensuite nécessaire d'expliquer l'état de l'art concernant le problème posé par le sujet de stage. On pourra alors exposer le travail réaliser pendant ce stage, en revenant d'abord sur le sujet, puis en expliquant les pistes suivies, pour enfin s'intéresser aux résultats.
