--- a/stage.tex
+++ b/stage.tex
@@ -9,7 +9,7 @@ Le but de ce travail est de proposer un algorithme efficace de compression et d'
 
 Les reads étant une donnée très redondante, la recherche d'un motif dans le texte devrait occasionner de nombreux calculs identiques. L'un des objectifs est donc d'optimiser la recherche en factorisant ces calculs. 
 
-De plus, du fait de la redondance des données, les $k$-contextes devraient être grands et nombreux. Aussi, pour accentuer la probabilité d'obtenir de longues suites de caractères identiques, l'idée est de trier la \kbwt sur ses $k$-contextes. 
+De plus, du fait de la redondance des données, les $k$-contextes devraient être grands et nombreux. Aussi, pour accentuer la probabilité d'obtenir de longues suites de caractères identiques, l'idée est de trier la \kbwt\ sur ses $k$-contextes. 
 
 Il faut donc fournir les structures et algorithmes nécessaires au maintien des propriétés de la \bwt sur la \kbwt \ triée.
 
@@ -21,8 +21,22 @@ Il faut donc fournir les structures et algorithmes nécessaires au maintien des 
 %	stocker LF plutot que les structures de Petri
 %	optimiser le stockage de LF
 %	enlever les k-contextes chevauchant 2 reads
+Premières idées :
+	. chercher par blocs
+	. stocker permutations (-> infos ne peut pas se contenir elle meme ; décrire différentes idées stockage)
+Implémentation pour tester faisabilité
+étude de la compression
+calcul de l'entropie pour voir si correspond
+compression avec compresseurs existants
 
+pour recherche, besoin de lf. pour lf besoin struc Petri -> lourd
+sur k-contextes, lf croissante -> stocker lf ? mieux
 
+lf lourde
+essais compression
+
+petits k-contextes qd \$ dans contexte -> enlever ces contextes ?
+non
 
 \subsection{Résultats} 
 
