--- a/intro.tex
+++ b/intro.tex
@@ -5,9 +5,9 @@ Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-
 
 De plus, depuis l'émergence des techniques de séquençage haut débit, la masse de données biologiques a augmenté plus vite que les algorithmes existants ne sont capables de les traiter. Le besoin d'améliorer ces algorithmes est donc de plus en plus pressant, à chaque étape du traitement et de l'analyse de ces données.
 
-La compression et l'indexation des reads, fragments d'ADN retournés par les séquenceurs, est notamment un sujet sur lequel peu de recherches ont été menées, malgré la taille grandissante de ces données.
+La compression et l'indexation des reads, fragments d'ADN retournés par les séquenceurs, est notamment un sujet pour lequel le besoin de nouvelles méthodes est important, du fait de la taille grandissante de ces données.
 
-Néanmoins, beaucoup d'algorithme sur la compression de données existent déjà, et sont utilisés pour stocker l'ADN.
+Beaucoup d'algorithmes sur la compression de données existent déjà, et sont utilisés pour stocker des données biologiques. 
 
 Le travail présenté ici porte donc sur l'étude de l'un de ces algorithmes, \textit{la transformée de Burrows-Wheeler à contexte borné}, et son amélioration pour ce type de données particuliers que sont les reads.
 
