--- a/references.tex
+++ b/references.tex
@@ -2,6 +2,7 @@
 \begin{thebibliography}{ABC}	
     \bibitem[1]{bwt} Michael Burrows et D. J. Wheeler, \emph{A block-sorting lossless data compression algorithm}, 10th May 1994, Digital SRC Research Report 124.
     \bibitem[2]{petri} Matthias Petri, \emph{Scalable succinct indexing for large text collections}, July 2013.
+    \bibitem[3]{sarray} Okanohara,D. and Sadakane,K. \emph{Practical entropy-compressed rank/select dictionary} , 2006, CoRR abs/cs/0610001.
 %    \bibitem[2]{fmindex} Michael Burrows, D. J. Wheeler \emph{A block-sorting lossless data compression algorithm}, 10th May 1994, Digital SRC Research Report 124.
 %    \bibitem[a]{tutoltx} tutoriel \LaTeX{} \emph{http://www.ukonline.be/programmation/latex/tutoriel/index.php}
 %    \bibitem[b]{expltx} exemple de rapport de stage en \LaTeX{} \emph{http://blog.hikoweb.net/index.php?/post2011/11/06/Exemple-de-rapport-en-LaTeX}
