--- a/title.tex
+++ b/title.tex
@@ -6,7 +6,7 @@
 
 \begin{minipage}[t]{0.48\textwidth}
   \begin{flushleft}
-%    \includegraphics [width=30mm]{images/logo-univ.png} \\[0.5cm]
+    \includegraphics [width=30mm]{images/logo-univ.png} \\[0.5cm]
     \begin{spacing}{1.5}
       \textsc{\large Université de Lille 1}
     \end{spacing}
@@ -15,7 +15,7 @@
 %{\includegraphics [width=30mm]{images/INRIA_logo.png} \\[0.5cm]}
 \begin{minipage}[t]{0.48\textwidth}
   \begin{flushright}
-%    \includegraphics [width=30mm]{images/INRIA_logo.png} \\[0.5cm]
+    \includegraphics [width=30mm]{images/INRIA_logo.png} \\[0.5cm]
     \textsc{\large Équipe Bonsai}
   \end{flushright}
 \end{minipage} \\[1.5cm]
