quite p2 + correction coquilles

--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,7 @@
 \section*{Introduction} % Pas de numérotation
 \addcontentsline{toc}{section}{Introduction} % Ajout dans la table des matières
 
-Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-informatique, avec de applications aussi bien en biologie fondamentale qu'en médecine. Qu'il serve à étudier l'évolution ou des maladies, la demande est de lus en plus importante.
+Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-informatique, avec de applications aussi bien en biologie fondamentale qu'en médecine. Qu'il serve à étudier l'évolution ou des maladies, la demande est de plus en plus importante.
 
 De plus, depuis l'émergence des techniques de séquençage haut débit, la masse de données biologiques a augmenté plus vite que les algorithmes existants ne sont capables de les traiter. Le besoin d'améliorer ces algorithmes est donc de plus en plus pressant, à chaque étape du traitement et de l'analyse de ces données.
 
